wordcount now can use s3

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 #ignore executable files
 /source/application/word_counter/worker/worker
 /source/application/word_counter/master/master
+/source/application/word_counter/client/client
