--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /source/application/word_counter/worker/worker
 /source/application/word_counter/master/master
 /source/application/word_counter/client/client
+/source/monitoring/amazon_monitor
