--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,13 @@
 /source/application/word_counter/master/master
 /source/application/word_counter/client/client
 /source/monitoring/agent
+
+#ignore configuration files generated dinamically
 /configuration/ec2_inst.json
 /configuration/zk_servers_addrs.json
+
+#ingore script used for testing
+/script_aws/old
+/source/compile.sh
+/source/monitoring/get_inst.sh
+/EC2_inst.json
