Changed instance setup of gc

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 /script_aws/test
 /compile.sh
 
-#ingnore script conf files for aws e gc
+#ignore script conf files for aws e gc
 /script_aws/conf
 /script_gce/conf
 
@@ -14,3 +14,6 @@
 
 #ignore test folder
 /test
+
+#ignore log folder
+/log
